# mkdocs-shadcn-lwq

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: release.yaml  testing.yaml  testpypi.yaml
pages/: mkdocs.yml
pages/docs/: 10_get_started.md  20_pages.md  30_html.md  index.md
pages/docs/extensions/: pymdownx_arithmatex.md  pymdownx_blocks_caption.md  pymdownx_blocks_tab.md  pymdownx_tabbed.md
pages/docs/plugins/: autonumber.md  excalidraw.md
shadcn/: main.html
shadcn/components/: sidebar_item.html  sidebar_section.html
shadcn/css/: base.css
shadcn/plugins/: autonumber.py
shadcn/plugins/mixins/: base.py  git.py  order.py
shadcn/templates/: bottom_navigation.html  copy_button.html  extra_head.html  footer.html  header.html  page.html  permalink.html  sidebar.html  toc.html
tailwind/: article.css  codehilite.css  codexec.css  extra.css  input.css  main.css  tabs.css  toc.css
tests/: conftest.py  test_browser.py
