[project]
name = "mkdocs-shadcn-lwq"
version = "0.10.11"
description = "Documentation that also shines"
authors = [
    { name = "wanqiang.liu", email = "zerocirculation@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mkdocs>=1.6.1",
    "bottle>=0.13.2",
    "pymdown-extensions>=10.14.3",
    "gitpython>=3.1.45",
]

[dependency-groups]
dev = [
    "accessible-pygments>=0.0.4",
    "mkdocstrings[python]>=0.26.1",
    "mypy>=1.12.0",
    "pre-commit>=3.5.0",
    "pygments>=2.19.1",
    "pymdown-extensions>=10.14.2",
    "pytest-playwright>=0.5.2",
    "ruff>=0.12.11",
    "ty>=0.0.1a21",
    "types-markdown>=3.7.0.20241204",
    "types-pygments>=2.19.0.20250107",
]

[project.entry-points."mkdocs.themes"]
"shadcn-lwq" = "shadcn"

[project.entry-points."mkdocs.plugins"]
"shadcn-lwq/search" = "shadcn.plugins.search:SearchPlugin"
"shadcn-lwq/excalidraw" = "shadcn.plugins.excalidraw:ExcalidrawPlugin"
"shadcn-lwq/autonumber" = "shadcn.plugins.autonumber:AutoNumberPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shadcn"]

[tool.ruff]
target-version = "py38"
line-length = 79

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79

[tool.ty.environment]
python-version = "3.8"
